--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
   
   
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="css/login.css">
 
   
 </head>
@@ -34,7 +34,7 @@
 </footer>
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
-    <script src="js/index.js"></script>
+    <script src="js/login.js"></script>
 
 </body>
 </html>
